[package]
name = "og-generator"
version = "0.1.0"
edition = "2021"
description = "A simple Open Graph image generator which compiles to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
js-sys = "0.3.70"
oxipng = { version = "9.1.2", default-features = false, features = [
    "zopfli",
    "freestanding",
] }
png = { version = "0.17.13", default-features = false }
resvg = { version = "0.44.0", default-features = false, features = ["text"] }
textwrap = { version = "0.16.1", features = ["hyphenation"] }
tiny-skia = { version = "0.11.4", default-features = false, features = [
    "std",
    "simd",
] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary

[profile.dev.package."*"]
# Optimize all dependencies even in debug builds
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
